
2019-05-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (AM_CPPFLAGS): include new substituted LIBCOB_CPPFLAGS
	* Makefile.am: handle LOCAL_CJSON by adding cJSON.c to libcob's nodist
	  sources and cJSON.c + cJSON.h to DISTCLEANFILES

2019-05-26  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_runtime_hint), coblocal.h: new function for output additional
	  information to a warning/error directly called before, especially important
	  for (cob_runtime_error) which invokes the error handlers,
	  used for this scenario throughout common.c
	* common.c (cob_field_to_string): explicit check for field address
	* fileio.c (cob_get_filename_print), coblocal.h: new function to provide a
	  filename for output with filename, assign and possible file mapping
	* fileio.c (cob_exit_fileio), common.c (cob_fatal_error):
	  use of (cob_get_filename_print)
	* fileio.c (cob_delete_file): check errno after unlink/indexed_file_delete
	* reportio.c (cob_report_terminate, cob_report_generate): halt on fatal
	  error COB_EC_REPORT_INACTIVE

2019-05-19  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, mlio.c: check for WITH_XML2/WITH_CJSON before including
	  the corresponding header files as they showed to sometimes exist but
	  don't work, still ensure (for config.h not generated by configure)
	  that necessary headers are available

2019-05-13  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_fatal_error): added statement (if available) for
	  COB_FERROR_FILE
	* common.c, mlio.c: adjusted to handle HAVE_CJSON_H as an alternative
	  to HAVE_CJSON_CJSON_H

2019-05-11  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: increased COB_MAX_WORDLEN to 63 per COBOL 202x

2019-04-19  Simon Sobisch <simonsobisch@gnu.org>

	* common.c: fixed some bad/misplaced casts to size_t
	* common.c, screenio.c: initial approach to add mouse support
	  via COB_MOUSE_FLAGS, including exception values
	* common.c, screenio.c: adjustments to COB_INSERT_MODE are taken